--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -15,5 +15,27 @@
 }
 
 .button:hover {
-	background: var(--gold, #ffc802);
+	background: var(--light-gold, #ffedab);
 }
+
+/*
+.button:nth-child(1) {	
+	background: #FFFFFF; 
+}
+.button:nth-child(1):hover {	
+	background: #000000; 	
+}
+
+
+.button:nth-child(2) {
+	background: var(--gold, #ffc802); 
+}
+
+.button:nth-child(2):hover {
+	background: var(--gold, #FFEDAB); 
+}
+
+.resetColor:hover {
+	color: #ff0000; 
+}
+*/
