--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -18,24 +18,18 @@
 	background: var(--light-gold, #ffedab);
 }
 
-/*
-.button:nth-child(1) {	
-	background: #FFFFFF; 
+.button:nth-child(1) {
+	background: #ffffff;
 }
-.button:nth-child(1):hover {	
-	background: #000000; 	
-}
-
 
 .button:nth-child(2) {
-	background: var(--gold, #ffc802); 
+	background: var(--gold, #ffc802);
+}
+
+.button:nth-child(1):hover {
+	background: #787878;
 }
 
 .button:nth-child(2):hover {
-	background: var(--gold, #FFEDAB); 
+	background: var(--gold, #ffedab);
 }
-
-.resetColor:hover {
-	color: #ff0000; 
-}
-*/
